completed final model explanability using shap and saved model locally

--- a/notebooks/models.ipynb
+++ b/notebooks/models.ipynb
@@ -1951,7 +1951,26 @@
     "outputId": "a042b3fc-9ea3-46d1-f26a-1a695f787ecf"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Hyperparameter tuning for Random Forest\n",
+    "param_grid = {\n",
+    "    'n_estimators': [50, 100, 200],\n",
+    "    'max_depth': [None, 10, 20],\n",
+    "    'min_samples_split': [2, 5, 10]\n",
+    "}\n",
+    "grid_search_rf = GridSearchCV(RandomForestClassifier(random_state=42), param_grid, cv=3, scoring='f1', n_jobs=-1)\n",
+    "grid_search_rf.fit(X_train_fraud_resampled, y_train_fraud_resampled)\n",
+    "best_rf = grid_search_rf.best_estimator_\n",
+    "\n",
+    "# Evaluate best Random Forest model\n",
+    "y_pred_rf = best_rf.predict(X_test_fraud)\n",
+    "y_prob_rf = best_rf.predict_proba(X_test_fraud)[:, 1]\n",
+    "report_rf = classification_report(y_test_fraud, y_pred_rf, output_dict=True)\n",
+    "auc_rf = roc_auc_score(y_test_fraud, y_prob_rf)\n",
+    "\n",
+    "print(\"Best Random Forest Performance:\")\n",
+    "print(f\"Precision: {report_rf['1']['precision']}, Recall: {report_rf['1']['recall']}, F1-Score: {report_rf['1']['f1-score']}, AUC-ROC: {auc_rf}\")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1960,7 +1979,79 @@
     "id": "R-CJfM_FuM3e"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# --- Step 4: Cross-Validation ---\n",
+    "\n",
+    "# Cross-validation for Random Forest\n",
+    "cv_scores_rf = cross_val_score(best_rf, X_fraud, y_fraud, cv=5, scoring='f1')\n",
+    "print(f\"Cross-Validation F1 Scores (Random Forest): {cv_scores_rf}\")\n",
+    "print(f\"Mean F1 Score: {np.mean(cv_scores_rf)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Step 5: Feature Importance ---\n",
+    "\n",
+    "# Feature importance for Random Forest\n",
+    "feat_importances = pd.Series(best_rf.feature_importances_, index=X_fraud.columns)\n",
+    "feat_importances.nlargest(10).plot(kind='barh')\n",
+    "plt.title(\"Top 10 Features\")\n",
+    "plt.show()\n",
+    "\n",
+    "# SHAP values for interpretability\n",
+    "explainer = shap.TreeExplainer(best_rf)\n",
+    "shap_values = explainer.shap_values(X_test_fraud)\n",
+    "shap.summary_plot(shap_values[1], X_test_fraud, feature_names=X_fraud.columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Step 6: Save Models Locally ---\n",
+    "\n",
+    "# Save models locally\n",
+    "model_path_fraud = '/content/random_forest_fraud_model.pkl'\n",
+    "joblib.dump(best_rf, model_path_fraud)\n",
+    "print(f\"Saved Fraud Detection model to {model_path_fraud}\")\n",
+    "\n",
+    "# Download models to local machine\n",
+    "files.download(model_path_fraud)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Step 8: Results ---\n",
+    "\n",
+    "# Convert results to DataFrames\n",
+    "results_fraud_df = pd.DataFrame(results_fraud).T\n",
+    "results_credit_df = pd.DataFrame(results_credit).T\n",
+    "\n",
+    "# Display results\n",
+    "print(\"Fraud Detection Model Performance:\")\n",
+    "print(results_fraud_df)\n",
+    "\n",
+    "print(\"\\nCredit Card Fraud Detection Model Performance:\")\n",
+    "print(results_credit_df)\n",
+    "\n",
+    "# Save results to CSV\n",
+    "results_fraud_df.to_csv('/content/fraud_results.csv', index=True)\n",
+    "results_credit_df.to_csv('/content/credit_results.csv', index=True)\n",
+    "\n",
+    "# Download results\n",
+    "files.download('/content/fraud_results.csv')\n",
+    "files.download('/content/credit_results.csv')"
+   ]
   }
  ],
  "metadata": {
